feat: add test mode for phasing section to bypass vehicle limits
- Add testMode checkbox in PhasingSection component
- When enabled, allows editing current/phase freely without vehicle constraints
- Visual indicators show when test mode is active (orange theme)
- Includes many backend and frontend improvements

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>